Bug #14612 Cluster RBR: ndbrestore should create apply_status table
Submitted: 3 Nov 2005 16:22 Modified: 7 Dec 2006 5:38
Reporter: Jonathan Miller Email Updates:
Status: Closed
Category:Server: ClusterRep Severity:S3 (Non-critical)
Version:5.1.2 OS:Linux (Linux)
Assigned to: Guangbao Ni Target Version:

[3 Nov 2005 16:22] Jonathan Miller
Description:
If a restore is done on a slave cluster, and it does not have a MySQLD process attached,
the apply status table will not exist. The can at least cause the restored database to
not have an epoch to know where to start replication at from the master. It can also
cause the restore to fail.

How to repeat:
See above

Suggested fix:
ndbrestore should create apply status table
[9 Oct 2006 3:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13322

ChangeSet@1.2296, 2006-10-09 11:01:33+08:00, gni@dev3-127.(none) +2 -0
  BUG #14612 If a restore is done on a slave cluster, yet the apply_status and schema
tables don't exist,
             ndb_restore should create the apply_status and schema table.
[7 Dec 2006 5:38] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented in 5.1.14 changelog and 5.1 Cluster Replication docs.