BUG #14612 If a restore is done on a slave cluster, yet the apply_status and schema tables don't exist,            ndb_restore tool should create them.